Fixed z-index issues

--- a/borderchart.css
+++ b/borderchart.css
@@ -1,6 +1,7 @@
-.color-line-wrapper {position:absolute;z-index:3;}
+.color-line-wrapper {position:absolute;}
 .color-line {display:inline-block;position:absolute; }
 .color-border-wrapper {position:relative;}
+.color-border-wrapper img {position:relative;}
 
 /** Extra Rounded Corners Styles **/
 .color-line.top-left {border-top-left-radius: 10px;-webkit-border-top-left-radius: 10px; -moz-border-top-left-radius: 10px;}
@@ -18,7 +19,6 @@
 .color-border-wrapper.hover .color-line-wrapper.hover {
 	opacity:1;
 	filter: alpha(opacity=1);
-	z-index:5;
 }
 
 /** Styles for Labels **/
